--- a/src/index.html
+++ b/src/index.html
@@ -740,8 +740,11 @@
 				<span class="top-text">Accessible</span>
 				<span class="bottom-text">Want to know more?</span>
 			</h2>
+			<div class="subscribe-body">
 			<h4 class="subscribe-title">Sign up now and stay up to date with the latest news!</h4>
-			<a href="" class="btn btn-light subscribe-btn">Enter your email to get whitelisted </a>
+			<a href="#" class="btn primary-theme-btn" data-toggle="modal" data-target="#whitelistModal">Get
+				whitelisted</a>
+			</div>
 		</div>
 	</section>
 </div>
