footer and common styling

--- a/src/index.html
+++ b/src/index.html
@@ -518,22 +518,22 @@
 			<div class="container">
 				<div class="row no-gutters">
 					<div class="col-md-4 partner-item b-bottom b-right">
-						<img src="images/logo-alst-grey.png" alt="alst">
+						<a href="#" class="partner-link"><img src="images/logo-alst-grey.png" alt="alst"></a>
 					</div>
 					<div class="col-md-4 partner-item b-bottom b-right crop-corners">
-						<img src="images/logo-dcg-grey.png" alt="dcg">
+						<a href="#" class="partner-link"><img src="images/logo-dcg-grey.png" alt="dcg"></a>
 					</div>
 					<div class="col-md-4 partner-item b-bottom">
-						<img src="images/logo-coparion-grey.png" alt="coparion">
+						<a href="#" class="partner-link"><img src="images/logo-coparion-grey.png" alt="coparion"></a>
 					</div>
 					<div class="col-md-4 partner-item b-right">
-						<img src="images/logo-earlybird-grey.png" alt="earlybird">
+						<a href="#" class="partner-link"><img src="images/logo-earlybird-grey.png" alt="earlybird"></a>
 					</div>
 					<div class="col-md-4 partner-item b-right">
-						<img src="images/logo-htgf-grey.png" alt="htgf">
+						<a href="#" class="partner-link"><img src="images/logo-htgf-grey.png" alt="htgf"></a>
 					</div>
 					<div class="col-md-4 partner-item">
-						<img src="images/logo-solaris-bank-grey.png" alt="solaris">
+						<a href="#" class="partner-link"><img src="images/logo-solaris-bank-grey.png" alt="solaris"></a>
 					</div>
 				</div>
 			</div>
@@ -741,14 +741,81 @@
 				<span class="bottom-text">Want to know more?</span>
 			</h2>
 			<div class="subscribe-body">
-			<h4 class="subscribe-title">Sign up now and stay up to date with the latest news!</h4>
-			<a href="#" class="btn primary-theme-btn" data-toggle="modal" data-target="#whitelistModal">Get
-				whitelisted</a>
+				<h4 class="subscribe-title">Sign up now and stay up to date with the latest news!</h4>
+				<a href="#" class="btn primary-theme-btn" data-toggle="modal" data-target="#whitelistModal">Get
+					whitelisted</a>
 			</div>
 		</div>
 	</section>
 </div>
-<footer class="footer"></footer>
+<footer class="footer">
+	<div class="container">
+		<div class="footer-body">
+			<div class="row">
+				<div class="col col-8 footer-links">
+					<div class="row">
+						<div class="col">
+							<h6 class="foot-title">Bitwala Token</h6>
+							<ul class="foot-links">
+								<li><a href="#" class="foot-link">Privacy Policy</a></li>
+								<li><a href="#" class="foot-link">Imprint</a></li>
+							</ul>
+						</div>
+						<div class="col">
+							<h6 class="foot-title">Platform</h6>
+							<ul class="foot-links">
+								<li><a href="#" class="foot-link">Home page</a></li>
+							</ul>
+						</div>
+						<div class="col">
+							<h6 class="foot-title">Help</h6>
+							<ul class="foot-links">
+								<li><a href="#" class="foot-link">Contact Us</a></li>
+								<li><a href="#" class="foot-link">Blog</a></li>
+							</ul>
+						</div>
+						<div class="col">
+							<h6 class="foot-title">Social</h6>
+							<ul class="foot-links">
+								<li><a href="#" class="foot-link">Twitter</a></li>
+								<li><a href="#" class="foot-link">Facebook</a></li>
+								<li><a href="#" class="foot-link">YouTube</a></li>
+								<li><a href="#" class="foot-link">Reddit</a></li>
+								<li><a href="#" class="foot-link">Bitcoin Talk</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="col footer-logo">
+					<a href="#" class="logo"><img src="images/logo.png" alt="png"></a>
+				</div>
+			</div>
+		</div>
+		<div class="copyright">
+			<p>Notice pursuant to § 2 Section 10 of the German Banking Act:
+				Bitwala GmbH offers the brokerage of transactions on the purchase and sale of financial
+				instruments in accordance with §1 Section 1a Sentence 2 No. 1 of the Banking Act exclusively
+				in the name and for the account of the solarisBank AG. Bitwala GmbH is recorded as tied
+				agent
+				of solarisBank AG within the meaning of § 2 Section 10 of the German Banking Act in the
+				register which is kept by the German Federal Financial Supervisory Authority. The register
+				can
+				be accessed under www.bafin.de.</p>
+			<p>
+				Warning of risks: <br>
+				Trading cryptocurrencies carries high risk and can lead to the total loss of the invested
+				capital. We strongly recommend not to invest more than you can afford to completely lose.
+				Before you start trading cryptocurrencies make sure that you fully understand the risks
+				associated. Should you need help we recommend to contact an independent competent person or
+				organisation. Any personal successful investments when trading cryptocurrencies in the past
+				in
+				no case indicate your success in the future. The cryptocurrencies traded on Bitwala.com are
+				not suitable for all investors. For further information to the product offering, visit our
+				Support Center.</p>
+			<p>© Copyright 2018 Bitwala GmbH</p>
+		</div>
+	</div>
+</footer>
 <script type="text/javascript" src="js/libs.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 </body>
