--- a/src/index.html
+++ b/src/index.html
@@ -10,49 +10,6 @@
 	<link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-<div class="modal fade whitelist-modal" id="whitelistModal" tabindex="-1" role="dialog"
-		 aria-labelledby="whitelistModal" aria-hidden="true">
-	<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				</button>
-				<a href="#" class="logo"><img src="images/logo.png" alt="logo"></a>
-				<h3 class="modal-title">Join the whitelist</h3>
-			</div>
-			<div class="modal-body">
-				<form class="whitelist-form">
-					<div class="form-group">
-						<input type="text" placeholder="Full Name" class="inp">
-						<input type="email" placeholder="Email" class="inp">
-					</div>
-					<div class="token-block">
-						<p class="sub-block-text">I want to reserve</p>
-						<div class="token-buttons">
-							<div class="token-button active">€100k&lt;</div>
-							<div class="token-button">≥€100k</div>
-						</div>
-						<div class="sub-block-text text-right">worth of tokens</div>
-					</div>
-					<p class="text-center">
-						<a href="#" class="btn primary-theme-btn">Get whitelisted</a>
-					</p>
-					<div class="form-group form-check">
-						<input type="checkbox" id="termsAndCond">
-						<label class="form-check-label" for="termsAndCond">By registering you
-							agree to our
-							<a href="#">Terms &amp; Conditions</a></label>
-						<input type="checkbox" id="addToNews">
-						<label class="form-check-label" for="addToNews">Add me to the
-							newsletter</label>
-					</div>
-				</form>
-			</div>
-
-		</div>
-	</div>
-</div>
 <header class="header">
 	<div class="container">
 		<div class="inner-wrap">
@@ -61,11 +18,11 @@
 				<a href="#" class="bank-live-link"><span class="text">Bank live</span><span
 							class="icon"><img src="images/bank-live-icon.png" alt=""></span></a>
 				<ul class="main-nav">
-					<li><a href="#" class="main-nav-link">STO</a></li>
-					<li><a href="#" class="main-nav-link">Roadmap</a></li>
-					<li><a href="#" class="main-nav-link">Team</a></li>
-					<li><a href="#" class="main-nav-link">FAQ</a></li>
-					<li><a href="#" class="main-nav-link">Social</a></li>
+					<li><a href="#stoSection" class="main-nav-link">STO</a></li>
+					<li><a href="#roadmapSection" class="main-nav-link">Roadmap</a></li>
+					<li><a href="#teamSection" class="main-nav-link">Team</a></li>
+					<li><a href="#faqSection" class="main-nav-link">FAQ</a></li>
+					<li><a href="#footer" class="main-nav-link">Social</a></li>
 				</ul>
 				<a href="#" class="btn primary-theme-btn" data-toggle="modal" data-target="#whitelistModal">Get
 					whitelisted</a>
@@ -81,14 +38,15 @@
 			<div class="home-descr">
 				<p class="description">We’re growing Bitwala into a one-of-a-kind platform and you can be
 					part of it!</p>
-				<a href="#" class="learn-more-link"><span class="icon"><i class="fa fa-angle-down"
-																																	aria-hidden="true"></i></span><span
+				<a href="#discoverSection" class="learn-more-link anchor"><span class="icon"><i
+							class="fa fa-angle-down"
+							aria-hidden="true"></i></span><span
 							class="text">Learn more</span></a><br>
 				<a href="" class="arr-link">Or get whitelisted &gt;</a>
 			</div>
 		</div>
 	</section>
-	<section class="discover-section">
+	<section id="discoverSection" class="discover-section">
 		<div class="container">
 			<h2 class="section-title">
 				<span class="top-text">Discover Bitwala</span>
@@ -128,7 +86,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="token-sale-section">
+	<section id="stoSection" class="token-sale-section">
 		<div class="container">
 			<div class="section-body">
 				<div class="main-block">
@@ -151,7 +109,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="roadmap-section">
+	<section id="roadmapSection" class="roadmap-section">
 		<div class="container">
 			<h2 class="section-title">
 				<span class="top-text">The future</span>
@@ -412,7 +370,7 @@
 			<div class="slider"></div>
 		</div>
 	</section>
-	<section class="team-section">
+	<section id="teamSection" class="team-section">
 		<div class="container">
 			<h2 class="section-title">
 				<span class="top-text">Disruptive team</span>
@@ -524,16 +482,19 @@
 						<a href="#" class="partner-link"><img src="images/logo-dcg-grey.png" alt="dcg"></a>
 					</div>
 					<div class="col-md-4 partner-item b-bottom">
-						<a href="#" class="partner-link"><img src="images/logo-coparion-grey.png" alt="coparion"></a>
+						<a href="#" class="partner-link"><img src="images/logo-coparion-grey.png"
+																									alt="coparion"></a>
 					</div>
 					<div class="col-md-4 partner-item b-right">
-						<a href="#" class="partner-link"><img src="images/logo-earlybird-grey.png" alt="earlybird"></a>
+						<a href="#" class="partner-link"><img src="images/logo-earlybird-grey.png"
+																									alt="earlybird"></a>
 					</div>
 					<div class="col-md-4 partner-item b-right">
 						<a href="#" class="partner-link"><img src="images/logo-htgf-grey.png" alt="htgf"></a>
 					</div>
 					<div class="col-md-4 partner-item">
-						<a href="#" class="partner-link"><img src="images/logo-solaris-bank-grey.png" alt="solaris"></a>
+						<a href="#" class="partner-link"><img src="images/logo-solaris-bank-grey.png"
+																									alt="solaris"></a>
 					</div>
 				</div>
 			</div>
@@ -640,7 +601,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="faq-section">
+	<section id="faqSection" class="faq-section">
 		<div class="container">
 			<h2 class="sub-section-title text-center">FAQ
 			</h2>
@@ -748,7 +709,7 @@
 		</div>
 	</section>
 </div>
-<footer class="footer">
+<footer id="footer" class="footer">
 	<div class="container">
 		<div class="footer-body">
 			<div class="row">
@@ -816,6 +777,49 @@
 		</div>
 	</div>
 </footer>
+<div class="modal fade whitelist-modal" id="whitelistModal" tabindex="-1" role="dialog"
+		 aria-labelledby="whitelistModal" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+				<a href="#" class="logo"><img src="images/logo.png" alt="logo"></a>
+				<h3 class="modal-title">Join the whitelist</h3>
+			</div>
+			<div class="modal-body">
+				<form class="whitelist-form">
+					<div class="form-group">
+						<input type="text" placeholder="Full Name" class="inp">
+						<input type="email" placeholder="Email" class="inp">
+					</div>
+					<div class="token-block">
+						<p class="sub-block-text">I want to reserve</p>
+						<div class="token-buttons">
+							<div class="token-button active">€100k&lt;</div>
+							<div class="token-button">≥€100k</div>
+						</div>
+						<div class="sub-block-text text-right">worth of tokens</div>
+					</div>
+					<p class="text-center">
+						<a href="#" class="btn primary-theme-btn">Get whitelisted</a>
+					</p>
+					<div class="form-group form-check">
+						<input type="checkbox" id="termsAndCond">
+						<label class="form-check-label" for="termsAndCond">By registering you
+							agree to our
+							<a href="#">Terms &amp; Conditions</a></label>
+						<input type="checkbox" id="addToNews">
+						<label class="form-check-label" for="addToNews">Add me to the
+							newsletter</label>
+					</div>
+				</form>
+			</div>
+
+		</div>
+	</div>
+</div>
 <script type="text/javascript" src="js/libs.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 </body>
