--- a/src/index.html
+++ b/src/index.html
@@ -367,7 +367,156 @@
 				<span class="top-text"> It’s not just us</span>
 				<span class="bottom-text">What people are saying</span>
 			</h2>
-			<div class="slider"></div>
+			<div class="reviews-slider">
+				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<div class="row">
+								<div class="col-5">
+									<div class="inner-img">
+										<img src="images/slider-img-1.png" alt="image">
+										<img class="review-logo" src="images/logo-bitcoin-foundation-white.png"
+												 alt="logo">
+									</div>
+								</div>
+								<div class="col-7">
+									<div class="review">
+										<div class="review-text">
+											<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+												tempor
+												incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore et
+												dolore magna aliqua.”</p>
+											<div class="review-author">Mark Brown, Bitcoin Foundation</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<div class="row">
+								<div class="col-5">
+									<div class="inner-img">
+										<img src="images/slider-img-1.png" alt="image">
+									</div>
+								</div>
+								<div class="col-7">
+									<div class="review">
+										<div class="review-text">
+											<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+												tempor
+												incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore et
+												dolore magna aliqua.”</p>
+											<div class="review-author">Mark Brown, Bitcoin Foundation</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<div class="row">
+								<div class="col-5">
+									<div class="inner-img">
+										<img src="images/slider-img-1.png" alt="image">
+									</div>
+								</div>
+								<div class="col-7">
+									<div class="review">
+										<div class="review-text">
+											<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+												tempor
+												incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore et
+												dolore magna aliqua.”</p>
+											<div class="review-author">Mark Brown, Bitcoin Foundation</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<div class="row">
+								<div class="col-5">
+									<div class="inner-img">
+										<img src="images/slider-img-1.png" alt="image">
+									</div>
+								</div>
+								<div class="col-7">
+									<div class="review">
+										<div class="review-text">
+											<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+												tempor
+												incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore et
+												dolore magna aliqua.”</p>
+											<div class="review-author">Mark Brown, Bitcoin Foundation</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<div class="row">
+								<div class="col-5">
+									<div class="inner-img">
+										<img src="images/slider-img-1.png" alt="image">
+									</div>
+								</div>
+								<div class="col-7">
+									<div class="review">
+										<div class="review-text">
+											<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+												tempor
+												incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore et
+												dolore magna aliqua.”</p>
+											<div class="review-author">Mark Brown, Bitcoin Foundation</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<a class="carousel-control carousel-control-prev" href="#carouselExampleIndicators"
+						 role="button" data-slide="prev">
+						<i class="fa fa-angle-left" aria-hidden="true"></i>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="carousel-control carousel-control-next" href="#carouselExampleIndicators"
+						 role="button" data-slide="next">
+						<i class="fa fa-angle-right" aria-hidden="true"></i>
+						<span class="sr-only">Next</span>
+					</a>
+					<ol class="carousel-indicators">
+						<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active">
+							<img class="active-img" src="images/logo-bitcoin-foundation-blue.png"
+									 alt="bitcoin-foundation" width="140">
+							<img class="default-img" src="images/logo-bitcoin-foundation-grey.png"
+									 alt="bitcoin-foundation" width="140">
+						</li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="1">
+							<img class="active-img" src="images/logo-coindesk-blue.png" alt="bitcoin-foundation"
+									 width="160">
+							<img class="default-img" src="images/logo-coindesk-grey.png" alt="bitcoin-foundation"
+									 width="160">
+						</li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="2">
+							<img class="active-img" src="images/logo-solaris-bank-blue.png"
+									 alt="bitcoin-foundation" width="170">
+							<img class="default-img" src="images/logo-solaris-bank-grey.png"
+									 alt="bitcoin-foundation" width="170">
+						</li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="3">
+							<img class="active-img" src="images/logo-cointelegraph-blue.png"
+									 alt="bitcoin-foundation" width="130">
+							<img class="default-img" src="images/logo-cointelegraph-grey.png"
+									 alt="bitcoin-foundation" width="130">
+						</li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="4">
+							<img class="active-img" src="images/logo-coparion-blue.png" alt="bitcoin-foundation"
+									 width="130">
+							<img class="default-img" src="images/logo-coparion-grey.png" alt="bitcoin-foundation"
+									 width="130">
+						</li>
+					</ol>
+				</div>
+			</div>
 		</div>
 	</section>
 	<section id="teamSection" class="team-section">
