--- a/src/index.html
+++ b/src/index.html
@@ -38,54 +38,56 @@
 			<div class="home-descr">
 				<p class="description">We’re growing Bitwala into a one-of-a-kind platform and you can be
 					part of it!</p>
+				<a href="#" class="arr-link">Get whitelisted &gt;</a>
 				<a href="#discoverSection" class="learn-more-link anchor"><span class="icon"><i
 							class="fa fa-angle-down"
 							aria-hidden="true"></i></span><span
 							class="text">Learn more</span></a><br>
-				<a href="" class="arr-link">Or get whitelisted &gt;</a>
 			</div>
 		</div>
 	</section>
-	<section id="discoverSection" class="discover-section">
-		<div class="container">
-			<h2 class="section-title">
-				<span class="top-text">Discover Bitwala</span>
-				<span class="bottom-text">The crypto-first bank</span>
-			</h2>
-		</div>
-		<div class="section-descr">
-			<img class="section-img" src="images/mobile-screens.png" alt="">
-			<div class="container abs-container">
-				<h3 class="descr-title">Safe, fast, <br> transparent and live!</h3>
-				<div class="counter">
-					<div class="count">40,000</div>
-					<div class="descr">Early adopters and counting</div>
-				</div>
-				<div class="registration">
-					<h4 class="registration-title">Create your own Bitwala account today</h4>
-					<a href="#" class="arr-link registration-link">Sign up now &gt;</a>
+	<div class="common-bg">
+		<section id="discoverSection" class="discover-section">
+			<div class="container">
+				<h2 class="section-title">
+					<span class="top-text">Discover Bitwala</span>
+					<span class="bottom-text">The crypto-first bank</span>
+				</h2>
+			</div>
+			<div class="section-descr">
+				<img class="section-img" src="images/mobile-screens.png" alt="">
+				<div class="container abs-container">
+					<h3 class="descr-title">Safe, fast, <br> transparent and live!</h3>
+					<div class="counter">
+						<div class="count">40,000</div>
+						<div class="descr">Early adopters and counting</div>
+					</div>
+					<div class="registration">
+						<h4 class="registration-title">Create your own Bitwala account today</h4>
+						<a href="#" class="arr-link registration-link">Sign up now &gt;</a>
+					</div>
 				</div>
 			</div>
-		</div>
-	</section>
-	<section class="introducing-section">
-		<div class="container">
-			<h2 class="section-title">
-				<span class="top-text">Introducing</span>
-				<span class="bottom-text">Bitwala Token Offering</span>
-			</h2>
-		</div>
-		<div class="section-descr">
-			<img class="section-img" src="images/graphic-market-growth.png" alt="">
-			<div class="container abs-container">
-				<div class="quotation">
-					<p class="text">“Up to 10% of the global GDP (~$10 trillion) will be tokenised and
-						available for trading on a blockchain by 2025” </p>
-					<p class="sign">– WEF 2018</p>
+		</section>
+		<section class="introducing-section">
+			<div class="container">
+				<h2 class="section-title">
+					<span class="top-text">Introducing</span>
+					<span class="bottom-text">Bitwala Token Offering</span>
+				</h2>
+			</div>
+			<div class="section-descr">
+				<img class="section-img" src="images/graphic-market-growth.png" alt="">
+				<div class="container abs-container">
+					<div class="quotation">
+						<p class="text">“Up to 10% of the global GDP (~$10 trillion) will be tokenised and
+							available for trading on a blockchain by 2025” </p>
+						<p class="sign">– WEF 2018</p>
+					</div>
 				</div>
 			</div>
-		</div>
-	</section>
+		</section>
+	</div>
 	<section id="stoSection" class="token-sale-section">
 		<div class="container">
 			<div class="section-body">
@@ -369,120 +371,122 @@
 			</h2>
 			<div class="reviews-slider">
 				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-					<div class="carousel-inner">
-						<div class="carousel-item active">
-							<div class="row">
-								<div class="col-5">
-									<div class="inner-img">
-										<img src="images/slider-img-1.png" alt="image">
-										<img class="review-logo" src="images/logo-bitcoin-foundation-white.png"
-												 alt="logo">
+					<div class="inner-wrap">
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<div class="row">
+									<div class="col-5">
+										<div class="inner-img">
+											<img src="images/slider-img-1.png" alt="image">
+											<img class="review-logo" src="images/logo-bitcoin-foundation-white.png"
+													 alt="logo">
+										</div>
+									</div>
+									<div class="col-7">
+										<div class="review">
+											<div class="review-text">
+												<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+													tempor
+													incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore et
+													dolore magna aliqua.”</p>
+												<div class="review-author">Mark Brown, Bitcoin Foundation</div>
+											</div>
+										</div>
 									</div>
 								</div>
-								<div class="col-7">
-									<div class="review">
-										<div class="review-text">
-											<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-												tempor
-												incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore et
-												dolore magna aliqua.”</p>
-											<div class="review-author">Mark Brown, Bitcoin Foundation</div>
+							</div>
+							<div class="carousel-item">
+								<div class="row">
+									<div class="col-5">
+										<div class="inner-img">
+											<img src="images/slider-img-1.png" alt="image">
+										</div>
+									</div>
+									<div class="col-7">
+										<div class="review">
+											<div class="review-text">
+												<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+													tempor
+													incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore et
+													dolore magna aliqua.”</p>
+												<div class="review-author">Mark Brown, Bitcoin Foundation</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<div class="row">
+									<div class="col-5">
+										<div class="inner-img">
+											<img src="images/slider-img-1.png" alt="image">
+										</div>
+									</div>
+									<div class="col-7">
+										<div class="review">
+											<div class="review-text">
+												<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+													tempor
+													incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore et
+													dolore magna aliqua.”</p>
+												<div class="review-author">Mark Brown, Bitcoin Foundation</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<div class="row">
+									<div class="col-5">
+										<div class="inner-img">
+											<img src="images/slider-img-1.png" alt="image">
+										</div>
+									</div>
+									<div class="col-7">
+										<div class="review">
+											<div class="review-text">
+												<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+													tempor
+													incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore et
+													dolore magna aliqua.”</p>
+												<div class="review-author">Mark Brown, Bitcoin Foundation</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<div class="row">
+									<div class="col-5">
+										<div class="inner-img">
+											<img src="images/slider-img-1.png" alt="image">
+										</div>
+									</div>
+									<div class="col-7">
+										<div class="review">
+											<div class="review-text">
+												<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+													tempor
+													incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore et
+													dolore magna aliqua.”</p>
+												<div class="review-author">Mark Brown, Bitcoin Foundation</div>
+											</div>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-						<div class="carousel-item">
-							<div class="row">
-								<div class="col-5">
-									<div class="inner-img">
-										<img src="images/slider-img-1.png" alt="image">
-									</div>
-								</div>
-								<div class="col-7">
-									<div class="review">
-										<div class="review-text">
-											<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-												tempor
-												incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore et
-												dolore magna aliqua.”</p>
-											<div class="review-author">Mark Brown, Bitcoin Foundation</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<div class="row">
-								<div class="col-5">
-									<div class="inner-img">
-										<img src="images/slider-img-1.png" alt="image">
-									</div>
-								</div>
-								<div class="col-7">
-									<div class="review">
-										<div class="review-text">
-											<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-												tempor
-												incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore et
-												dolore magna aliqua.”</p>
-											<div class="review-author">Mark Brown, Bitcoin Foundation</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<div class="row">
-								<div class="col-5">
-									<div class="inner-img">
-										<img src="images/slider-img-1.png" alt="image">
-									</div>
-								</div>
-								<div class="col-7">
-									<div class="review">
-										<div class="review-text">
-											<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-												tempor
-												incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore et
-												dolore magna aliqua.”</p>
-											<div class="review-author">Mark Brown, Bitcoin Foundation</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="carousel-item">
-							<div class="row">
-								<div class="col-5">
-									<div class="inner-img">
-										<img src="images/slider-img-1.png" alt="image">
-									</div>
-								</div>
-								<div class="col-7">
-									<div class="review">
-										<div class="review-text">
-											<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-												tempor
-												incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore et
-												dolore magna aliqua.”</p>
-											<div class="review-author">Mark Brown, Bitcoin Foundation</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
+						<a class="carousel-control carousel-control-prev" href="#carouselExampleIndicators"
+							 role="button" data-slide="prev">
+							<i class="fa fa-angle-left" aria-hidden="true"></i>
+							<span class="sr-only">Previous</span>
+						</a>
+						<a class="carousel-control carousel-control-next" href="#carouselExampleIndicators"
+							 role="button" data-slide="next">
+							<i class="fa fa-angle-right" aria-hidden="true"></i>
+							<span class="sr-only">Next</span>
+						</a>
 					</div>
-					<a class="carousel-control carousel-control-prev" href="#carouselExampleIndicators"
-						 role="button" data-slide="prev">
-						<i class="fa fa-angle-left" aria-hidden="true"></i>
-						<span class="sr-only">Previous</span>
-					</a>
-					<a class="carousel-control carousel-control-next" href="#carouselExampleIndicators"
-						 role="button" data-slide="next">
-						<i class="fa fa-angle-right" aria-hidden="true"></i>
-						<span class="sr-only">Next</span>
-					</a>
 					<ol class="carousel-indicators">
 						<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active">
 							<img class="active-img" src="images/logo-bitcoin-foundation-blue.png"
@@ -625,25 +629,25 @@
 			<div class="container">
 				<div class="row no-gutters">
 					<div class="col-md-4 partner-item b-bottom b-right">
-						<a href="#" class="partner-link"><img src="images/logo-alst-grey.png" alt="alst"></a>
+						<a href="#" class="partner-link"><img src="images/logo-alst-grey.png" alt="alst" width="245"></a>
 					</div>
 					<div class="col-md-4 partner-item b-bottom b-right crop-corners">
-						<a href="#" class="partner-link"><img src="images/logo-dcg-grey.png" alt="dcg"></a>
+						<a href="#" class="partner-link"><img src="images/logo-dcg-grey.png" alt="dcg" width="130"></a>
 					</div>
 					<div class="col-md-4 partner-item b-bottom">
 						<a href="#" class="partner-link"><img src="images/logo-coparion-grey.png"
-																									alt="coparion"></a>
+																									alt="coparion" width="190"></a>
 					</div>
 					<div class="col-md-4 partner-item b-right">
 						<a href="#" class="partner-link"><img src="images/logo-earlybird-grey.png"
-																									alt="earlybird"></a>
+																									alt="earlybird" width="200"></a>
 					</div>
 					<div class="col-md-4 partner-item b-right">
 						<a href="#" class="partner-link"><img src="images/logo-htgf-grey.png" alt="htgf"></a>
 					</div>
 					<div class="col-md-4 partner-item">
 						<a href="#" class="partner-link"><img src="images/logo-solaris-bank-grey.png"
-																									alt="solaris"></a>
+																									alt="solaris" width="225px"></a>
 					</div>
 				</div>
 			</div>
