--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,15 @@
 				rel="stylesheet">
 	<link href="css/libs.css" rel="stylesheet">
 	<link href="css/main.css" rel="stylesheet">
+	<script src='https://www.google.com/recaptcha/api.js?render=6LcO0ocUAAAAABj11_siC5P2rZSsxviho9yi0XMh'></script>
 </head>
 <body>
+<script>
+  grecaptcha.ready(function() {
+   var token = grecaptcha.execute('6Ldo6YYUAAAAAD3wLtkK7HwL8zoPaf1gwAP-XwLK', {action: 'action_name'});
+   console.log(token);
+  });
+</script>
 <header class="header">
 	<div class="container">
 		<div class="inner-wrap">
@@ -99,9 +106,9 @@
 				</div>
 				<div class="sub-block token-block">
 					<p class="sub-block-text">I want to reserve</p>
-					<div class="token-buttons">
-						<div class="token-button active">€100k&lt;</div>
-						<div class="token-button">≥€100k</div>
+					<div id="tokenButtonsLanding" class="token-buttons">
+						<div class="token-button less active">€100k&lt;</div>
+						<div class="token-button more">≥€100k</div>
 					</div>
 					<div class="sub-block-text text-right">worth of tokens</div>
 					<p class="text-right">
@@ -947,8 +954,8 @@
 					<div class="token-block">
 						<p class="sub-block-text">I want to reserve</p>
 						<div class="token-buttons" id="tokenButtons">
-							<div class="token-button active">€100k&lt;</div>
-							<div class="token-button">≥€100k</div>
+							<div class="token-button active less">€100k&lt;</div>
+							<div class="token-button more">≥€100k</div>
 						</div>
 						<div class="sub-block-text text-right">worth of tokens</div>
 					</div>
