--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,10 @@
 				rel="stylesheet">
 	<link href="css/libs.css" rel="stylesheet">
 	<link href="css/main.css" rel="stylesheet">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
 	<script src='https://www.google.com/recaptcha/api.js?render=6LcO0ocUAAAAABj11_siC5P2rZSsxviho9yi0XMh'></script>
 </head>
 <body>
-<script>
-  grecaptcha.ready(function() {
-   var token = grecaptcha.execute('6Ldo6YYUAAAAAD3wLtkK7HwL8zoPaf1gwAP-XwLK', {action: 'action_name'});
-   console.log(token);
-  });
-</script>
 <header class="header">
 	<div class="container">
 		<div class="inner-wrap">
@@ -960,8 +955,10 @@
 						<div class="sub-block-text text-right">worth of tokens</div>
 					</div>
 					<div class="form-group">
-						<input id="firstName" type="text" placeholder="First Name" class="inp">
-						<input id="lastName" type="text" placeholder="Last Name" class="inp">
+						<div class="row" style="padding: 14px;">
+							<input id="firstName" type="text" placeholder="First Name" class="inp col" style="margin-right: 58px;">
+							<input id="lastName" type="text" placeholder="Last Name" class="inp col">
+						</div>
 						<input id="email" type="email" placeholder="Email" class="inp">
 						<select name="nationality" id="nationality">
 							<option value="">Nationality</option>
@@ -1180,5 +1177,6 @@
 </div>
 <script type="text/javascript" src="js/libs.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
 </body>
 </html>
