--- a/src/index.html
+++ b/src/index.html
@@ -663,26 +663,51 @@
 			</h2>
 			<div class="row media-texts">
 				<div class="col col-md-4 text-center">
-					“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-					ut labore et dolore magna aliqua.”
+					“This recent development will mark another milestone achievement for blockchain industry as a whole
+					in terms of achieving mainstream recognition and adoption.”
+				</div>
+				<div class="col col-md-4 text-center">
+					“Users can pay for a restaurant meal with their card, and the bank will automatically convert their
+					bitcoin into currency.”
 				</div>
 				<div class="col col-md-4 text-center">
 					“40.000 clients signed up for the new crypto banking service.”
 				</div>
+			</div>
+			<div class="row media-images align-items-center">
 				<div class="col col-md-4 text-center">
-					“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-					do eiusmod tempor incididunt ut labore et dolore magna aliqua.”
+					<img src="images/logo-ccn.png" alt="ccn" height="55">
+				</div>
+				<div class="col col-md-4 text-center">
+					<img src="images/logo-cnbc.png" alt="cnbc" height="65">
+				</div>
+				<div class="col col-md-4 text-center">
+					<img src="images/logo-cointelegraph.png" alt="cointelegraph" height="80">
+				</div>
+			</div>
+			<div class="row media-texts">
+				<div class="col col-md-4 text-center">
+					“Anyone who wants to trade cryptocurrencies will soon find out that it’s rather complicated. [...]
+					Startup Bitwala wants to change that and make Bitcoin accessible for all.”
+				</div>
+				<div class="col col-md-4 text-center">
+					“There's a Bright Future for Cryptocurrencies.”
+					Founder and President Jörg Von Minckwitz interviewed by Bloomberg
+				</div>
+				<div class="col col-md-4 text-center">
+					“The Bitwala account comes with a bitcoin wallet. Users can manage both their BTC and euro deposits
+					in one place”
 				</div>
 			</div>
 			<div class="row media-images align-items-center">
 				<div class="col col-md-4 text-center">
-					<img src="images/logo-wall-street.png" alt="wall street">
+					<img src="images/logo-suddeutsche-zeitung.png" alt="suddeutsche-zeitung" height="45">
 				</div>
 				<div class="col col-md-4 text-center">
-					<img src="images/logo-cointelegraph.png" alt="cointelegraph">
+					<img src="images/logo-bloomberg.png" alt="bloomberg" height="45">
 				</div>
 				<div class="col col-md-4 text-center">
-					<img src="images/logo-coindesk.png" alt="coindesk">
+					<img src="images/logo-bitcoin-com.png" alt="bitcoin" height="50">
 				</div>
 			</div>
 		</div>
