--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 			<div class="home-descr">
 				<p class="description">We’re growing Bitwala into a one-of-a-kind platform and you can be
 					part of it!</p>
-				<a href="#" class="arr-link">Get whitelisted &gt;</a>
+				<a href="#" claroadmapss="arr-link">Get whitelisted &gt;</a>
 				<a href="#discoverSection" class="learn-more-link anchor"><span class="icon"><i
 							class="fa fa-angle-down"
 							aria-hidden="true"></i></span><span
@@ -117,46 +117,44 @@
 				<span class="top-text">The future</span>
 				<span class="bottom-text">Product roadmap</span>
 			</h2>
-			<div class="container">
-				<div class="roadmap-items-wrap">
-					<div class="row">
-						<div class="col col-md-6">
-							<div class="roadmap-item">
-								<img src="images/icon-trading.png" alt="trading">
-								<h4 class="item-title">Trade any asset</h4>
-								<div class="item-descr">The future of assets is tokenisation. We will create the
-									universal trading facility, providing access to unlimited tokenised assets, in one
-									platform.
-								</div>
+			<div class="roadmap-items-wrap">
+				<div class="row">
+					<div class="col col-md-6">
+						<div class="roadmap-item">
+							<img src="images/icon-trading.png" alt="trading">
+							<h4 class="item-title">Trade any asset</h4>
+							<div class="item-descr">The future of assets is tokenisation. We will create the
+								universal trading facility, providing access to unlimited tokenised assets, in one
+								platform.
 							</div>
 						</div>
-						<div class="col col-md-6">
-							<div class="roadmap-item">
-								<img src="images/icon-banking.png" alt="banking">
-								<h4 class="item-title">Banking without limit</h4>
-								<div class="item-descr">With our own German banking license we will provide even
-									faster and more convenient banking services to our users, without restrictions.
-								</div>
+					</div>
+					<div class="col col-md-6">
+						<div class="roadmap-item">
+							<img src="images/icon-banking.png" alt="banking">
+							<h4 class="item-title">Banking without limit</h4>
+							<div class="item-descr">With our own German banking license we will provide even
+								faster and more convenient banking services to our users, without restrictions.
 							</div>
 						</div>
-						<div class="w-100"></div>
-						<div class="col col-md-6">
-							<div class="roadmap-item">
-								<img src="images/icon-development.png" alt="development">
-								<h4 class="item-title">More choices, less hassle</h4>
-								<div class="item-descr">Our planned developments include mobile payment (Apple &
-									Google Pay), automatic taxation for crypto trading, lending and much more.
-								</div>
+					</div>
+					<div class="w-100"></div>
+					<div class="col col-md-6">
+						<div class="roadmap-item">
+							<img src="images/icon-development.png" alt="development">
+							<h4 class="item-title">More choices, less hassle</h4>
+							<div class="item-descr">Our planned developments include mobile payment (Apple &
+								Google Pay), automatic taxation for crypto trading, lending and much more.
 							</div>
 						</div>
-						<div class="col col-md-6">
-							<div class="roadmap-item">
-								<img src="images/icon-globe.png" alt="globe">
-								<h4 class="item-title">Anyone, anywhere</h4>
-								<div class="item-descr">We truly believe that transfering value should be without
-									boundaries or exclusions. We started with the EU and will expand to 10 additional
-									markets.
-								</div>
+					</div>
+					<div class="col col-md-6">
+						<div class="roadmap-item">
+							<img src="images/icon-globe.png" alt="globe">
+							<h4 class="item-title">Anyone, anywhere</h4>
+							<div class="item-descr">We truly believe that transfering value should be without
+								boundaries or exclusions. We started with the EU and will expand to 10 additional
+								markets.
 							</div>
 						</div>
 					</div>
@@ -387,7 +385,8 @@
 											<div class="review-text">
 												<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
 													tempor
-													incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore et
+													incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore
+													et
 													dolore magna aliqua.”</p>
 												<div class="review-author">Mark Brown, Bitcoin Foundation</div>
 											</div>
@@ -407,7 +406,8 @@
 											<div class="review-text">
 												<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
 													tempor
-													incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore et
+													incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore
+													et
 													dolore magna aliqua.”</p>
 												<div class="review-author">Mark Brown, Bitcoin Foundation</div>
 											</div>
@@ -427,7 +427,8 @@
 											<div class="review-text">
 												<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
 													tempor
-													incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore et
+													incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore
+													et
 													dolore magna aliqua.”</p>
 												<div class="review-author">Mark Brown, Bitcoin Foundation</div>
 											</div>
@@ -447,7 +448,8 @@
 											<div class="review-text">
 												<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
 													tempor
-													incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore et
+													incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore
+													et
 													dolore magna aliqua.”</p>
 												<div class="review-author">Mark Brown, Bitcoin Foundation</div>
 											</div>
@@ -467,7 +469,8 @@
 											<div class="review-text">
 												<p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
 													tempor
-													incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore et
+													incididunt ut labore et dolore magna aliqua. Tempor incididunt ut labore
+													et
 													dolore magna aliqua.”</p>
 												<div class="review-author">Mark Brown, Bitcoin Foundation</div>
 											</div>
@@ -629,10 +632,12 @@
 			<div class="container">
 				<div class="row no-gutters">
 					<div class="col-md-4 partner-item b-bottom b-right">
-						<a href="#" class="partner-link"><img src="images/logo-alst-grey.png" alt="alst" width="245"></a>
+						<a href="#" class="partner-link"><img src="images/logo-alst-grey.png" alt="alst"
+																									width="245"></a>
 					</div>
 					<div class="col-md-4 partner-item b-bottom b-right crop-corners">
-						<a href="#" class="partner-link"><img src="images/logo-dcg-grey.png" alt="dcg" width="130"></a>
+						<a href="#" class="partner-link"><img src="images/logo-dcg-grey.png" alt="dcg"
+																									width="130"></a>
 					</div>
 					<div class="col-md-4 partner-item b-bottom">
 						<a href="#" class="partner-link"><img src="images/logo-coparion-grey.png"
@@ -661,15 +666,41 @@
 			</h2>
 			<div class="row media-texts">
 				<div class="col col-md-4 text-center">
-					“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-					ut labore et dolore magna aliqua.”
+					“This recent development will mark another milestone achievement for blockchain industry
+					as a whole in terms of achieving mainstream recognition and adoption.”
+				</div>
+				<div class="col col-md-4 text-center">
+					“Users can pay for a restaurant meal with their card, and the bank will automatically
+					convert their bitcoin into currency.”
 				</div>
 				<div class="col col-md-4 text-center">
 					“40.000 clients signed up for the new crypto banking service.”
 				</div>
+			</div>
+			<div class="row media-images align-items-center m-bottom">
 				<div class="col col-md-4 text-center">
-					“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-					do eiusmod tempor incididunt ut labore et dolore magna aliqua.”
+					<img src="images/logo-wall-street.png" alt="wall street">
+				</div>
+				<div class="col col-md-4 text-center">
+					<img src="images/logo-cointelegraph.png" alt="cointelegraph">
+				</div>
+				<div class="col col-md-4 text-center">
+					<img src="images/logo-coindesk.png" alt="coindesk">
+				</div>
+			</div>
+			<div class="row media-texts">
+				<div class="col col-md-4 text-center">
+					“Anyone who wants to trade cryptocurrencies will soon find out that it’s rather
+					complicated. [...] Startup Bitwala wants to change that and make Bitcoin accessible for
+					all.”
+				</div>
+				<div class="col col-md-4 text-center">
+					“There's a Bright Future for Cryptocurrencies.”
+					Founder and President Jörg Von Minckwitz interviewed by Bloomberg
+				</div>
+				<div class="col col-md-4 text-center">
+					“The Bitwala account comes with a bitcoin wallet. Users can manage both their BTC and euro
+					deposits in one place”
 				</div>
 			</div>
 			<div class="row media-images align-items-center">
