--- a/src/index.html
+++ b/src/index.html
@@ -96,14 +96,16 @@
 		</section>
 	</div>
 	<section id="stoSection" class="token-sale-section">
+		<div class="container-fluid">
+			<div class="main-block">
+				<h2 class="main-block-title">Participate in our STO now</h2>
+				<div class="main-block-descr">And profit from a potential trillion € market, ready to be
+					unlocked!
+				</div>
+			</div>
+		</div>
 		<div class="container">
 			<div class="section-body">
-				<div class="main-block">
-					<h2 class="main-block-title">Participate in our STO now</h2>
-					<div class="main-block-descr">And profit from a potential trillion € market, ready to be
-						unlocked!
-					</div>
-				</div>
 				<div class="sub-block token-block">
 					<p class="sub-block-text">I want to reserve</p>
 					<div id="tokenButtonsLanding" class="token-buttons">
@@ -379,10 +381,10 @@
 					<div class="inner-wrap">
 						<div class="carousel-inner">
 							<div class="carousel-item active">
-								<div class="row">
+								<div class="row no-gutters">
 									<div class="col-5">
 										<div class="inner-img">
-											<img src="images/slider-img-1.png" alt="image">
+											<img class="bg-img" src="images/slider-img-1.png" alt="image">
 											<img class="review-logo" src="images/logo-bitcoin-foundation-white.png"
 													 alt="logo">
 										</div>
@@ -402,10 +404,10 @@
 								</div>
 							</div>
 							<div class="carousel-item">
-								<div class="row">
+								<div class="row no-gutters">
 									<div class="col-5">
 										<div class="inner-img">
-											<img src="images/slider-img-1.png" alt="image">
+											<img class="bg-img" src="images/slider-img-1.png" alt="image">
 										</div>
 									</div>
 									<div class="col-7">
@@ -423,10 +425,10 @@
 								</div>
 							</div>
 							<div class="carousel-item">
-								<div class="row">
+								<div class="row no-gutters">
 									<div class="col-5">
 										<div class="inner-img">
-											<img src="images/slider-img-1.png" alt="image">
+											<img class="bg-img"  src="images/slider-img-1.png" alt="image">
 										</div>
 									</div>
 									<div class="col-7">
@@ -444,10 +446,10 @@
 								</div>
 							</div>
 							<div class="carousel-item">
-								<div class="row">
+								<div class="row no-gutters">
 									<div class="col-5">
 										<div class="inner-img">
-											<img src="images/slider-img-1.png" alt="image">
+											<img class="bg-img"  src="images/slider-img-1.png" alt="image">
 										</div>
 									</div>
 									<div class="col-7">
@@ -465,10 +467,10 @@
 								</div>
 							</div>
 							<div class="carousel-item">
-								<div class="row">
+								<div class="row no-gutters">
 									<div class="col-5">
 										<div class="inner-img">
-											<img src="images/slider-img-1.png" alt="image">
+											<img class="bg-img"  src="images/slider-img-1.png" alt="image">
 										</div>
 									</div>
 									<div class="col-7">
