--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,10 @@
 				<a href="#" class="btn primary-theme-btn" data-toggle="modal" data-target="#whitelistModal">Get
 					whitelisted</a>
 			</div>
+			<a href="#" class="menu-toggle">
+				<i class="fas fa-bars"></i>
+				<i class="fa fa-times"></i>
+			</a>
 		</div>
 	</div>
 </header>
